After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 678744 - 'GRegexMatchFlags' wrongly passed as 'GRegexCompileFlags' argument
'GRegexMatchFlags' wrongly passed as 'GRegexCompileFlags' argument
Status: RESOLVED FIXED
Product: gssdp
Classification: Other
Component: General
unspecified
Other Linux
: Normal minor
: ---
Assigned To: GUPnP Maintainers
GUPnP Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-06-25 00:16 UTC by Riko Yamada
Modified: 2019-02-22 09:29 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix the reported bug. (1.11 KB, patch)
2012-06-25 00:17 UTC, Riko Yamada
committed Details | Review

Description Riko Yamada 2012-06-25 00:16:39 UTC
Clang captured this error message:

../../../opw-gssdp/libgssdp/gssdp-resource-browser.c:469:35: error: implicit conversion from enumeration type 'GRegexMatchFlags' to different enumeration type 'GRegexCompileFlags' [-Werror,-Wconversion]
                                  G_REGEX_MATCH_ANCHORED,
Comment 1 Riko Yamada 2012-06-25 00:17:33 UTC
Created attachment 217159 [details] [review]
Fix the reported bug.