Correct arguments to g_regex_match_simple() call

We were passing RegexMatchFlags as GRegexCompileFlags.

https://bugzilla.gnome.org/show_bug.cgi?id=678744